# seiza-server

./: .containerignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rpm.yml
docs/: accounts-authentication.md  architecture.md  production-rpm.md  reusable-astro-overlay.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  vite.config.ts
frontend/e2e/: api-docs.spec.ts  auth.spec.ts  health.ts  overlay.spec.ts  upload.spec.ts
frontend/public/: sitemap.xml
frontend/src/: ApiDocs.tsx  App.tsx  AstroOverlay.tsx  DataSources.tsx  api.ts  catalogs.ts  styles.css
infra/aws/: seiza-identity-dynamodb.yaml  seiza-jobs-dynamodb.yaml
migrations/identity/: 0001_identity.sql
packaging/nginx/: seiza-server.conf.example
packaging/rpm/: Containerfile  build-in-container.sh  build-rpm.sh  seiza-server.env  seiza-server.service  seiza-server.spec  verify-in-container.sh
src/: annotations.rs  api.rs  auth.rs  config.rs  dynamodb_common.rs  dynamodb_identity.rs  dynamodb_repository.rs  email.rs  identity.rs  lib.rs  main.rs  models.rs  overlay.rs  rate_limit.rs  repository.rs  satellites.rs  solver.rs  sqlx_identity.rs  star_identifiers.rs  storage.rs  store_migration.rs  transport.rs  uploads.rs  worker.rs
src/api/: auth.rs  catalog.rs  tus.rs
