[package]
name = "seiza-server"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Queued HTTP plate-solving service built on Seiza"
publish = false
repository = "https://github.com/theatrus/seiza-server"
readme = "README.md"
keywords = ["astronomy", "astrometry", "plate-solving", "server"]
categories = ["science", "web-programming::http-server"]

[features]
default = []
aws = ["dep:aws-config", "dep:aws-sdk-dynamodb", "dep:aws-sdk-s3", "dep:aws-sdk-sesv2", "dep:aws-sdk-sqs", "dep:urlencoding"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
aws-config = { version = "1", optional = true, default-features = false, features = ["credentials-process", "default-https-client", "rt-tokio", "sso"] }
aws-sdk-dynamodb = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
aws-sdk-sesv2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sqs = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
email_address = "0.2"
getrandom = "0.4"
hmac = "0.12"
http = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider"] }
# Select AWS-LC-RS for every Rustls user in the process. The AWS SDK's
# `default-https-client` feature also selects its AWS-LC provider directly.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
sqlx = { version = "0.9", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio", "sqlite", "tls-rustls-aws-lc-rs"] }
seiza = "0.8.1"
seiza-fits = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.7", features = ["cors", "fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
url = "2"
urlencoding = { version = "2", optional = true }
webauthn-rs = { version = "0.5.5", default-features = false, features = ["conditional-ui", "danger-allow-state-serialisation"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
